--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -212,4 +212,8 @@
     <!-- QSTiles requires unlocking before being accessible -->
     <string name="qstiles_requires_unlocking_title">Quick settings sensitive tiles</string>
     <string name="qstiles_requires_unlocking_summary">Unlock device to use sensitive quick settings tiles</string>
+
+    <!-- Annoying Notifications -->
+    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
+    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
 </resources>
