Settings: Screen off fod [3/3]
Change-Id: I7d443192a1929630d9dbe409f23c9aaff0e4c542

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -189,4 +189,7 @@
     <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
     <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
 
+    <!-- Screen off fod -->
+    <string name="fod_gesture_title">Screen off fingerprint</string>
+    <string name="fod_gesture_summary">Allows unlocking the device without having to wake up the screen first</string>
 </resources>
