--- a/res/values/lineage_config.xml
+++ b/res/values/lineage_config.xml
@@ -34,4 +34,7 @@
 
     <!-- Whether to show peak refresh rate in display settings -->
     <bool name="config_show_peak_refresh_rate_switch">false</bool>
+
+    <!-- Screen off FOD -->
+    <bool name="config_supportScreenOffFod">false</bool>
 </resources>
