Settings: Add incall vibration options [3/3]
* allow setting vibration when call is connected
* allow setting vibration when call is disconnected
* allow setting vibration for call waiting
* this works with google and aosp dialer :)

[arrow-13.0]:
- Move inside accessibility_vibration_settings
  as all the aosp vibration toggles are there

includes:
fixup! Settings: incall vibration options [3/3]

[ghostrider-reborn]
- Enable by default
- Add to the slider-based prefs page as well

Change-Id: I55e99f501a3af07287c57a23939666351f4cef67
Signed-off-by: Karan Parashar <whyredfire@gmail.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/res/xml/accessibility_vibration_settings.xml
+++ b/res/xml/accessibility_vibration_settings.xml
@@ -40,4 +40,27 @@
         android:title="@string/accessibility_touch_vibration_title"
         settings:keywords="@string/keywords_touch_vibration"
         app:controller="com.android.settings.accessibility.HapticFeedbackIntensityPreferenceController" />
+
+    <!-- Incall vibration options -->
+    <PreferenceCategory
+        android:key="accessibility_incall_vibration_category"
+        android:title="@string/incall_vibration_category" >
+
+        <SwitchPreference
+            android:key="vibrate_on_connect"
+            android:title="@string/incall_vibrate_connect_title"
+            android:defaultValue="true" />
+
+        <SwitchPreference
+            android:key="vibrate_on_callwaiting"
+            android:title="@string/incall_vibrate_call_wait_title"
+            android:defaultValue="true" />
+
+        <SwitchPreference
+            android:key="vibrate_on_disconnect"
+            android:title="@string/incall_vibrate_disconnect_title"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
