--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -129,6 +129,13 @@
             settings:controller="com.android.settings.gestures.ScreenOffUdfpsPreferenceController" />
 
         <SwitchPreference
+            android:key="screen_off_udfps_enabled"
+            android:title="@string/screen_off_udfps_title"
+            android:summary="@string/screen_off_udfps_summary"
+            android:defaultValue="false"
+            settings:controller="com.android.settings.security.UdfpsGesturePreferenceController" />
+
+        <SwitchPreference
             android:key="ambient_display_notification"
             android:title="@string/doze_title"
             android:summary="@string/doze_summary"
