--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -108,4 +108,13 @@
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SimpleBuildNumberPreferenceController"/>
 
+    <!-- Dedication -->
+    <Preference
+        android:key="dedication"
+        android:title="This build is dedicated to: Oliwia"
+        android:summary="@string/summary_placeholder"
+        android:selectable="false"
+        settings:enableCopying="true"
+        settings:controller="Oliwia"/>
+
 </PreferenceScreen>
