Settings: Add toggle for secure QS tiles on lockscreen
Change-Id: I2d3e3d6fa20ceba7bc9c354495f94500fa61b7d4
Signed-off-by: penglezos <panagiotisegl@gmail.com>
Signed-off-by: Skyblueborb <tomaszborbely0710@gmail.com>

--- a/res/xml/screen_lock_settings.xml
+++ b/res/xml/screen_lock_settings.xml
@@ -67,4 +67,9 @@
         android:defaultValue="false"
         settings:controller="com.android.settings.security.UdfpsGesturePreferenceController" />
 
+    <lineageos.preference.LineageSecureSettingSwitchPreference
+        android:key="qs_tiles_requires_unlocking"
+        android:title="@string/qstiles_requires_unlocking_title"
+        android:summary="@string/qstiles_requires_unlocking_summary"
+        android:defaultValue="true"/>
 </PreferenceScreen>
