--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -209,4 +209,7 @@
     <string name="screen_off_udfps_title">Always on Fingerprint</string>
     <string name="screen_off_udfps_summary">Allows unlocking with the screen off.\nEnabling may cause accidental wake-ups</string>
 
+    <!-- QSTiles requires unlocking before being accessible -->
+    <string name="qstiles_requires_unlocking_title">Quick settings sensitive tiles</string>
+    <string name="qstiles_requires_unlocking_summary">Unlock device to use sensitive quick settings tiles</string>
 </resources>
