Settings: Add a toggle to force LTE_CA
Change-Id: I017be698dc6c438edf2236df7c0125c05202bf3b
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>
Signed-off-by: Skyblueborb <tomaszborbely0710@gmail.com>

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -214,4 +214,8 @@
     <!-- Summary text for screen off UDFPS [CHAR LIMIT=NONE]-->
     <string name="ambient_display_screen_off_udfps_summary">Allows unlocking with the screen off.\nEnabling may cause accidental wake-ups</string>
 
+    <!-- Force LTE_CA -->
+    <string name="force_lte_ca">Force LTE CA</string>
+    <string name="force_lte_ca_summary">Force LTE carrier aggregation to work</string>
+
 </resources>
